# hot-dust

./: README.md  environment.yml  evaluate.ipynb  fit.ipynb  granule.ipynb  model_xg.ipynb  predict.ipynb  preview.ipynb  pyproject.toml
.dvc/: config
data/: .gitignore  fit.npz.dvc  granules-prediction-cm.dvc  granules-prediction.dvc  granules.dvc  merra.dvc  network.dvc  rt_nn_irdust_training_data.nc.dvc
hot_dust/: __init__.py  model.py  model_xg.ipynb  preprocess.py
