[tool.poetry]
name = "hot-dust"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "hot_dust"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
black = "^23.7.0"
dask = "^2023.7.0"
dvc = {version = "^2.58", extras = ["s3"]}
hvplot = "^0.8.4"
ipykernel = "^6.24.0"
netcdf4 = "^1.6.4"
tensorflow = "^2.13.0"
xarray = "^2023.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
