[tool.poetry]
name = "hot-dust"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "hot_dust" }]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
black = "^23.7.0"
dask = "^2023.7.0"
dvc = {extras = ["s3"], version = "^3.26.2"}
hvplot = "^0.8.4"
ipykernel = "^6.24.0"
netcdf4 = "^1.6.4"
tensorflow = "^2.15"
xarray = "^2023.7.0"
matplotlib = "^3.7.2"
xgboost = "^2.0.0"
scikit-learn = "^1.3.1"
pytest = "^7.4.3"
datashader = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
